--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ricardo Zaal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: linear-gradient(to right, #0f172a, #1e293b);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      color: #facc15;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      max-width: 600px;
+    }
+    a {
+      text-decoration: none;
+      background: #facc15;
+      color: #0f172a;
+      padding: 0.8rem 2rem;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    a:hover {
+      background: #fde047;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Ricardo Zaal’s Website</h1>
-  <p>Site under construction. Big things are coming.</p>
+  <div>
+    <h1>Ricardo Zaal</h1>
+    <p>
+      A voice of faith, purpose, and vision.  
+      Helping people discover their calling and build a life that inspires generations.
+    </p>
+    <a href="#">Learn More</a>
+  </div>
 </body>
 </html>
