--- a/index.html
+++ b/index.html
@@ -1,55 +1,161 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ricardo Zaal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ricardo Zaal — A Voice of Faith, Purpose & Vision</title>
+  <meta name="description" content="Ricardo Zaal helps Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold faith and practical action." />
+
+  <!-- Social preview -->
+  <meta property="og:title" content="Ricardo Zaal — A Voice of Faith, Purpose & Vision" />
+  <meta property="og:description" content="Helping people discover calling, build income with purpose, and restore dignity." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ricardozaal.com/" />
+
+  <!-- Font (fast, privacy-friendly) -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
   <style>
-    body {
-      margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background: linear-gradient(to right, #0f172a, #1e293b);
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
+    :root{
+      --bg1:#0e1b4d;   /* deep navy */
+      --bg2:#1f3a8a;   /* royal */
+      --bg3:#0ea5e9;   /* electric blue */
+      --accent:#ffd166;/* warm gold */
+      --text:#eef2ff;  /* soft white */
+      --muted:#c7d2fe; /* light indigo */
     }
-    h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      color: #facc15;
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
+      color:var(--text);
+      background: radial-gradient(1000px 800px at 20% 20%, #1b2a6b 0%, transparent 60%),
+                  radial-gradient(900px 700px at 80% 30%, #133a94 0%, transparent 55%),
+                  linear-gradient(135deg, var(--bg1), var(--bg2));
+      overflow-x:hidden;
     }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      max-width: 600px;
+
+    /* animated abstract gradient layer */
+    .glow{
+      position:fixed; inset:-20vmax;
+      background:
+        radial-gradient(40vmax 30vmax at 20% 60%, rgba(14,165,233,.35), transparent 60%),
+        radial-gradient(35vmax 35vmax at 80% 30%, rgba(99,102,241,.35), transparent 60%),
+        radial-gradient(25vmax 25vmax at 60% 80%, rgba(253,224,71,.25), transparent 60%);
+      filter:saturate(120%) blur(30px);
+      animation: drift 18s ease-in-out infinite alternate;
+      z-index:0;
     }
-    a {
-      text-decoration: none;
-      background: #facc15;
-      color: #0f172a;
-      padding: 0.8rem 2rem;
-      border-radius: 8px;
-      font-weight: bold;
-      transition: background 0.3s ease;
+    @keyframes drift{
+      0%   {transform:translate3d(-2%, -1%, 0) scale(1);}
+      50%  {transform:translate3d(1%, 2%, 0) scale(1.05);}
+      100% {transform:translate3d(-1%, 1%, 0) scale(1.02);}
     }
-    a:hover {
-      background: #fde047;
+
+    .wrap{
+      position:relative; z-index:1; min-height:100%;
+      display:grid; place-items:center; padding:6rem 1.25rem 4rem;
+    }
+
+    .hero{
+      text-align:center;
+      max-width:900px; width:100%;
+      backdrop-filter:saturate(120%) blur(6px);
+    }
+
+    .badge{
+      display:inline-block;
+      padding:.4rem .75rem; border:1px solid rgba(255,255,255,.18);
+      border-radius:999px; font-size:.8rem; letter-spacing:.08em;
+      text-transform:uppercase; color:var(--muted);
+      background:rgba(255,255,255,.06);
+    }
+
+    h1{
+      margin:.9rem 0 .5rem;
+      font-size:clamp(2.2rem, 5vw + .5rem, 4.25rem);
+      line-height:1.05; font-weight:800;
+      letter-spacing:.02em;
+      text-shadow:0 1px 0 rgba(0,0,0,.45);
+    }
+
+    .name{ color:var(--accent); }
+
+    .sub{
+      font-size:clamp(1rem, 1.2vw + .6rem, 1.35rem);
+      color:var(--muted);
+      margin:0 auto 2rem;
+      max-width:46ch;
+    }
+
+    .cta{
+      display:flex; gap:.9rem; justify-content:center; flex-wrap:wrap;
+    }
+
+    .btn{
+      appearance:none; border:none; cursor:pointer;
+      padding:.9rem 1.15rem; border-radius:.9rem;
+      font-weight:600; letter-spacing:.02em; font-size:1rem;
+      transition:transform .18s ease, box-shadow .18s ease, background .18s ease, color .18s ease;
+    }
+    .btn.primary{
+      background:linear-gradient(135deg, var(--accent), #ffc84d);
+      color:#2a2a2a;
+      box-shadow:0 10px 30px rgba(255,209,102,.2);
+    }
+    .btn.primary:hover{ transform:translateY(-2px); box-shadow:0 14px 40px rgba(255,209,102,.28); }
+    .btn.ghost{
+      background:rgba(255,255,255,.08); color:var(--text); border:1px solid rgba(255,255,255,.18);
+    }
+    .btn.ghost:hover{ transform:translateY(-2px); background:rgba(255,255,255,.12); }
+
+    /* footer stub */
+    footer{
+      position:fixed; left:0; right:0; bottom:0;
+      color:rgba(255,255,255,.6);
+      font-size:.85rem; text-align:center; padding:.75rem 1rem;
+      backdrop-filter:blur(6px); background:linear-gradient(180deg, rgba(0,0,0,.0), rgba(0,0,0,.18));
+    }
+
+    /* accessibility focus */
+    .btn:focus-visible{ outline:3px solid #fff; outline-offset:3px }
+
+    /* graceful no-motion */
+    @media (prefers-reduced-motion: reduce){
+      .glow{ animation:none }
+      .btn, .btn:hover{ transition:none; transform:none }
     }
   </style>
 </head>
 <body>
-  <div>
-    <h1>Ricardo Zaal</h1>
-    <p>
-      A voice of faith, purpose, and vision.  
-      Helping people discover their calling and build a life that inspires generations.
-    </p>
-    <a href="#">Learn More</a>
-  </div>
+  <div class="glow" aria-hidden="true"></div>
+
+  <main class="wrap">
+    <section class="hero" aria-label="Ricardo Zaal hero">
+      <span class="badge">Kingdom Builder • Coach • Pastor</span>
+      <h1><span class="name">Ricardo Zaal</span></h1>
+      <p class="sub">
+        A voice of <strong>faith, purpose, and vision</strong>—helping people discover their calling, 
+        rebuild income through business, and <strong>restore dignity</strong> with bold action.
+      </p>
+
+      <div class="cta">
+        <a class="btn primary" href="#start">Learn More</a>
+        <a class="btn ghost" href="mailto:info@ricardozaal.com">Contact</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    © <span id="y"></span> Ricardo Zaal · All rights reserved
+  </footer>
+
+  <script>
+    // set year
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
