--- a/index.html
+++ b/index.html
@@ -1,160 +1,216 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ricardo Zaal — A Voice of Faith, Purpose & Vision</title>
-  <meta name="description" content="Ricardo Zaal helps Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold faith and practical action." />
-
-  <!-- Social preview -->
-  <meta property="og:title" content="Ricardo Zaal — A Voice of Faith, Purpose & Vision" />
-  <meta property="og:description" content="Helping people discover calling, build income with purpose, and restore dignity." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ricardozaal.com/" />
-
-  <!-- Font (fast, privacy-friendly) -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
+  <title>Ricardo Zaal — A voice of faith, purpose, and vision</title>
+  <meta name="description" content="I help Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity, not begging for blessings.">
   <style>
     :root{
-      --bg1:#0e1b4d;   /* deep navy */
-      --bg2:#1f3a8a;   /* royal */
-      --bg3:#0ea5e9;   /* electric blue */
-      --accent:#ffd166;/* warm gold */
-      --text:#eef2ff;  /* soft white */
-      --muted:#c7d2fe; /* light indigo */
+      --bg-deep:#0a0f1c;        /* near black/blue */
+      --bg-mid:#0f1e34;         /* deep navy */
+      --teal:#08c4c9;           /* your turquoise */
+      --teal-strong:#06a9ad;    /* darker turquoise */
+      --ink:#e8f6f7;            /* soft white */
+      --ink-dim:#b7c7d1;
+      --maxw:1120px;
+      --radius:18px;
+      --shadow:0 10px 30px rgba(0,0,0,.35);
     }
 
+    /* Reset + base */
     *{box-sizing:border-box}
-    html,body{height:100%}
+    html{scroll-behavior:smooth}
     body{
       margin:0;
-      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
-      color:var(--text);
-      background: radial-gradient(1000px 800px at 20% 20%, #1b2a6b 0%, transparent 60%),
-                  radial-gradient(900px 700px at 80% 30%, #133a94 0%, transparent 55%),
-                  linear-gradient(135deg, var(--bg1), var(--bg2));
-      overflow-x:hidden;
-    }
-
-    /* animated abstract gradient layer */
-    .glow{
-      position:fixed; inset:-20vmax;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, sans-serif;
+      color:var(--ink);
       background:
-        radial-gradient(40vmax 30vmax at 20% 60%, rgba(14,165,233,.35), transparent 60%),
-        radial-gradient(35vmax 35vmax at 80% 30%, rgba(99,102,241,.35), transparent 60%),
-        radial-gradient(25vmax 25vmax at 60% 80%, rgba(253,224,71,.25), transparent 60%);
-      filter:saturate(120%) blur(30px);
-      animation: drift 18s ease-in-out infinite alternate;
-      z-index:0;
+        radial-gradient(1200px 600px at 70% -10%, rgba(8,196,201,.25), transparent 60%),
+        radial-gradient(800px 500px at -10% 20%, rgba(8,196,201,.18), transparent 60%),
+        linear-gradient(180deg, var(--bg-deep), var(--bg-mid) 60%, #0b1630 100%);
+      min-height:100dvh;
     }
-    @keyframes drift{
-      0%   {transform:translate3d(-2%, -1%, 0) scale(1);}
-      50%  {transform:translate3d(1%, 2%, 0) scale(1.05);}
-      100% {transform:translate3d(-1%, 1%, 0) scale(1.02);}
-    }
+    a{color:inherit;text-decoration:none}
+    .container{max-width:var(--maxw); margin-inline:auto; padding-inline:20px}
 
-    .wrap{
-      position:relative; z-index:1; min-height:100%;
-      display:grid; place-items:center; padding:6rem 1.25rem 4rem;
+    /* Header */
+    header{
+      position:sticky; top:0; z-index:10;
+      backdrop-filter:saturate(140%) blur(8px);
+      background:linear-gradient(180deg, rgba(10,15,28,.75), rgba(10,15,28,.35));
+      border-bottom:1px solid rgba(255,255,255,.06);
     }
+    .nav{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:14px 0;
+    }
+    .brand{
+      display:flex; gap:10px; align-items:center; font-weight:700; letter-spacing:.3px;
+    }
+    .logo{
+      width:36px; height:36px; border-radius:50%;
+      background:
+        conic-gradient(from 210deg at 50% 50%, #04333d, #09c6cf, #04333d);
+      box-shadow:inset 0 0 0 2px rgba(255,255,255,.08), var(--shadow);
+      display:grid; place-items:center; color:white; font-weight:800;
+    }
+    .menu a{opacity:.9; margin-left:22px}
+    .menu a:hover{opacity:1; color:var(--teal)}
 
+    /* Hero */
     .hero{
+      padding: clamp(70px, 12vh, 120px) 0 80px;
       text-align:center;
-      max-width:900px; width:100%;
-      backdrop-filter:saturate(120%) blur(6px);
     }
-
-    .badge{
-      display:inline-block;
-      padding:.4rem .75rem; border:1px solid rgba(255,255,255,.18);
-      border-radius:999px; font-size:.8rem; letter-spacing:.08em;
-      text-transform:uppercase; color:var(--muted);
-      background:rgba(255,255,255,.06);
+    .title{
+      font-size: clamp(38px, 6vw, 56px);
+      line-height:1.05; margin:0 0 18px;
+      text-shadow: 0 8px 40px rgba(8,196,201,.25);
     }
-
-    h1{
-      margin:.9rem 0 .5rem;
-      font-size:clamp(2.2rem, 5vw + .5rem, 4.25rem);
-      line-height:1.05; font-weight:800;
-      letter-spacing:.02em;
-      text-shadow:0 1px 0 rgba(0,0,0,.45);
+    .tag{
+      color:var(--ink);
+      opacity:.95;
+      font-size: clamp(16px, 2.2vw, 20px);
+      max-width: 780px;
+      margin: 0 auto 32px;
     }
-
-    .name{ color:var(--accent); }
-
-    .sub{
-      font-size:clamp(1rem, 1.2vw + .6rem, 1.35rem);
-      color:var(--muted);
-      margin:0 auto 2rem;
-      max-width:46ch;
-    }
-
-    .cta{
-      display:flex; gap:.9rem; justify-content:center; flex-wrap:wrap;
-    }
-
+    .cta{display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
     .btn{
-      appearance:none; border:none; cursor:pointer;
-      padding:.9rem 1.15rem; border-radius:.9rem;
-      font-weight:600; letter-spacing:.02em; font-size:1rem;
-      transition:transform .18s ease, box-shadow .18s ease, background .18s ease, color .18s ease;
+      padding:14px 22px; border-radius:12px; font-weight:700; letter-spacing:.2px;
+      border:1px solid transparent; cursor:pointer; transition:.25s ease; display:inline-block;
+      box-shadow: var(--shadow);
     }
-    .btn.primary{
-      background:linear-gradient(135deg, var(--accent), #ffc84d);
-      color:#2a2a2a;
-      box-shadow:0 10px 30px rgba(255,209,102,.2);
-    }
-    .btn.primary:hover{ transform:translateY(-2px); box-shadow:0 14px 40px rgba(255,209,102,.28); }
-    .btn.ghost{
-      background:rgba(255,255,255,.08); color:var(--text); border:1px solid rgba(255,255,255,.18);
-    }
-    .btn.ghost:hover{ transform:translateY(-2px); background:rgba(255,255,255,.12); }
+    .btn-primary{ background:linear-gradient(180deg, var(--teal), var(--teal-strong)); color:#03161a }
+    .btn-primary:hover{ transform:translateY(-2px); filter:saturate(110%) brightness(1.05)}
+    .btn-ghost{ background:transparent; color:var(--ink); border-color:rgba(255,255,255,.25) }
+    .btn-ghost:hover{ border-color:var(--teal); color:var(--teal)}
 
-    /* footer stub */
-    footer{
-      position:fixed; left:0; right:0; bottom:0;
-      color:rgba(255,255,255,.6);
-      font-size:.85rem; text-align:center; padding:.75rem 1rem;
-      backdrop-filter:blur(6px); background:linear-gradient(180deg, rgba(0,0,0,.0), rgba(0,0,0,.18));
+    /* Sections */
+    section{padding:80px 0}
+    .card{
+      background: rgba(255,255,255,.04);
+      border:1px solid rgba(255,255,255,.08);
+      border-radius: var(--radius);
+      padding: 28px;
+      box-shadow: var(--shadow);
     }
+    h2{margin:0 0 14px; font-size: clamp(26px, 4vw, 34px)}
+    .lead{color:var(--ink-dim); font-size:18px; line-height:1.6}
 
-    /* accessibility focus */
-    .btn:focus-visible{ outline:3px solid #fff; outline-offset:3px }
-
-    /* graceful no-motion */
-    @media (prefers-reduced-motion: reduce){
-      .glow{ animation:none }
-      .btn, .btn:hover{ transition:none; transform:none }
+    /* Contact */
+    .contact-grid{
+      display:grid; gap:18px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      margin-top:18px
     }
+    .contact-item{display:flex; gap:14px; align-items:center}
+    .icon{
+      width:42px; height:42px; border-radius:10px;
+      background:rgba(8,196,201,.12); display:grid; place-items:center;
+      border:1px solid rgba(8,196,201,.35)
+    }
+    footer{color:var(--ink-dim); padding:40px 0 60px; text-align:center; font-size:14px}
   </style>
 </head>
 <body>
-  <div class="glow" aria-hidden="true"></div>
 
-  <main class="wrap">
-    <section class="hero" aria-label="Ricardo Zaal hero">
-      <span class="badge">Kingdom Builder • Coach • Pastor</span>
-      <h1><span class="name">Ricardo Zaal</span></h1>
-      <p class="sub">
-        A voice of <strong>faith, purpose, and vision</strong>—helping people discover their calling, 
-        rebuild income through business, and <strong>restore dignity</strong> with bold action.
+  <!-- Header / simple nav -->
+  <header>
+    <div class="container nav">
+      <div class="brand">
+        <div class="logo">RZ</div>
+        <div>Ricardo Zaal</div>
+      </div>
+      <nav class="menu" aria-label="Main">
+        <a href="#about">Learn More</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <main>
+    <section class="hero container" id="home">
+      <h1 class="title">Ricardo Zaal</h1>
+      <p class="tag">
+        A voice of faith, purpose, and vision. Helping people discover their calling and
+        build a life that inspires generations.
       </p>
-
       <div class="cta">
-        <a class="btn primary" href="#start">Learn More</a>
-        <a class="btn ghost" href="mailto:info@ricardozaal.com">Contact</a>
+        <a class="btn btn-primary" href="#about">Learn More</a>
+        <a class="btn btn-ghost" href="#contact">Contact</a>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about">
+      <div class="container">
+        <div class="card">
+          <h2>What I Do</h2>
+          <p class="lead">
+            I help <strong>Kingdom-minded people</strong> rebuild their lives and income through
+            business and calling — restoring dignity, not begging for blessings. If you’re ready to
+            step into a fuller, faith-driven future, you’re in the right place.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="container">
+        <div class="card">
+          <h2>Let’s Connect</h2>
+          <p class="lead">Choose what’s easiest for you:</p>
+
+          <div class="contact-grid">
+
+            <div class="contact-item">
+              <div class="icon" aria-hidden="true">
+                <!-- Mail icon -->
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                  <path d="M4 6h16v12H4z" stroke="#08c4c9" stroke-width="1.6" />
+                  <path d="M4 6l8 6 8-6" stroke="#08c4c9" stroke-width="1.6" />
+                </svg>
+              </div>
+              <div>
+                <div>Email</div>
+                <a href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo" class="lead">info@ricardozaal.com</a>
+              </div>
+            </div>
+
+            <div class="contact-item">
+              <div class="icon" aria-hidden="true">
+                <!-- WhatsApp icon -->
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                  <circle cx="12" cy="12" r="9" stroke="#08c4c9" stroke-width="1.6"/>
+                  <path d="M8.5 9.5c.3 2.9 2.6 5.2 5.5 5.5l1.5-1.5-2.3-1 .9-1.8-1.8-.9-1 2.3-1.8-.9-1.5 1.3Z" fill="#08c4c9"/>
+                </svg>
+              </div>
+              <div>
+                <div>WhatsApp</div>
+                <a class="lead" href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect."
+                   target="_blank" rel="noopener">+27&nbsp;61&nbsp;856&nbsp;0854</a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="cta" style="margin-top:22px">
+            <a class="btn btn-primary" href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo">Email Me</a>
+            <a class="btn btn-ghost" href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect." target="_blank" rel="noopener">WhatsApp Me</a>
+          </div>
+        </div>
       </div>
     </section>
   </main>
 
   <footer>
-    © <span id="y"></span> Ricardo Zaal · All rights reserved
+    © <span id="y"></span> Ricardo Zaal. All rights reserved.
   </footer>
 
   <script>
-    // set year
+    // Auto-year in footer
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
 </body>
