--- a/index.html
+++ b/index.html
@@ -1,159 +1,189 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ricardo Zaal — Faith, Purpose & Legacy</title>
-  <meta name="description" content="I help Kingdom-minded people rebuild their lives and income through business and calling — restoring dignity with bold action.">
+  <title>Ricardo Zaal</title>
+  <meta name="description" content="Ricardo Zaal — faith, purpose, vision. Helping people discover calling, rebuild income through business, and restore dignity with bold action." />
+  <meta name="theme-color" content="#0f353a" />
   <style>
     :root{
-      --bg1:#0f2027; --bg2:#203a43; --bg3:#2c5364; /* dark turquoise blend */
-      --teal:#08c4c9; --teal-dark:#069ca0;
-      --ink:#eaf6f7; --ink-dim:#b7c7d1;
-      --shadow:0 10px 30px rgba(0,0,0,.35);
-      --radius:14px;
-      --maxw:1120px;
+      --bg1:#07292d; --bg2:#0e3a40; --card:#10383e; --muted:#9bd9d4;
+      --text:#e8fbf9; --text-dim:#bfeae6; --accent:#1fd3c1; --accent-2:#18a79a;
+      --shadow:0 20px 40px rgba(0,0,0,.35);
+      --radius:18px;
     }
     *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
+    html,body{height:100%}
     body{
-      margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      color:var(--ink);
-      background: linear-gradient(135deg,var(--bg1),var(--bg2),var(--bg3));
-      min-height:100dvh;
-      text-align:center;
+      margin:0; font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
+      color:var(--text); background:radial-gradient(1000px 700px at 70% -10%, #154f56 0%, transparent 60%) ,linear-gradient(180deg,var(--bg1),var(--bg2));
+      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
     }
-    a{color:inherit; text-decoration:none}
-    header{padding:clamp(60px,10vh,120px) 20px 40px}
-    h1{font-size:clamp(38px,6vw,56px); margin:0 0 14px}
-    .tag{font-size:clamp(16px,2.2vw,20px); opacity:.95; max-width:780px; margin:0 auto 28px}
-    .cta{display:flex; gap:14px; justify-content:center; flex-wrap:wrap; margin-top:8px}
+    a{color:var(--accent); text-decoration:none}
+    a:hover{color:#9ff1ea}
+    .wrap{max-width:1050px; margin:0 auto; padding:22px}
+    header{padding:80px 0 26px; text-align:center}
+    h1{font-size:56px; line-height:1.05; margin:0 0 14px; letter-spacing:.5px}
+    .lead{max-width:920px; margin:0 auto 28px; color:var(--text-dim); font-size:20px}
+    .cta-row{display:flex; gap:16px; justify-content:center; flex-wrap:wrap}
     .btn{
-      display:inline-block; padding:14px 22px; border-radius:12px; font-weight:700; letter-spacing:.2px;
-      border:1px solid transparent; box-shadow:var(--shadow); transition:.25s ease; cursor:pointer
+      padding:14px 22px; border-radius:14px; font-weight:700; letter-spacing:.2px; cursor:pointer;
+      border:1px solid #1a4b50; color:var(--text); transition:.2s ease; box-shadow:var(--shadow);
+      background:linear-gradient(180deg,#155559,#0f3c41);
     }
-    .btn-primary{ background:linear-gradient(180deg,var(--teal),var(--teal-dark)); color:#03272a }
-    .btn-primary:hover{ transform:translateY(-2px); filter:saturate(110%) brightness(1.05)}
-    .btn-ghost{ background:transparent; color:var(--ink); border-color:rgba(255,255,255,.25)}
-    .btn-ghost:hover{ border-color:var(--teal); color:var(--teal)}
+    .btn:hover{transform:translateY(-1px); filter:saturate(115%)}
+    .btn.alt{background:transparent; border-color:#2a666d}
+    .btn.primary{background:linear-gradient(180deg,var(--accent),#12b9aa); color:#05302e; border-color:#0fb9aa}
+    .btn.primary:hover{filter:saturate(120%)}
 
-    main section{padding:70px 20px}
-    .container{max-width:var(--maxw); margin:0 auto}
+    /* cards */
     .card{
-      background:rgba(255,255,255,.05);
-      border:1px solid rgba(255,255,255,.1);
-      border-radius:var(--radius);
-      padding:28px; box-shadow:var(--shadow);
-      margin:0 auto; max-width:900px;
-      text-align:left
+      background:linear-gradient(180deg,#0d3438,#0f3a40);
+      border:1px solid #18494f; border-radius:var(--radius); box-shadow:var(--shadow);
+      padding:28px; margin:28px auto; max-width:980px;
     }
-    h2{font-size:clamp(26px,4vw,34px); margin:0 0 10px; color:var(--teal)}
-    p.lead{font-size:18px; line-height:1.6; color:var(--ink-dim)}
+    .card h2{margin:0 0 14px; font-size:32px}
+    .card p{margin:10px 0; color:var(--text-dim); font-size:18px}
 
-    /* floating socials */
-    .social-fab{
-      position:fixed; right:18px; bottom:18px; z-index:20;
-      display:flex; flex-direction:column; gap:10px;
+    /* connect grid */
+    .grid{display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:22px}
+    .stat{
+      background:#0e3337; border:1px solid #18494f; border-radius:14px; padding:18px;
     }
+    .stat b{display:block; margin-bottom:4px; color:var(--muted)}
+    .muted{color:var(--text-dim)}
+
+    /* floating social bar */
     .fab{
-      width:48px; height:48px; border-radius:14px; display:grid; place-items:center;
-      background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.15);
-      box-shadow:var(--shadow); transition:.2s ease;
+      position:fixed; right:18px; top:120px; display:flex; flex-direction:column; gap:12px; z-index:10;
     }
-    .fab:hover{ transform:translateY(-2px); background:rgba(255,255,255,.12); border-color:rgba(8,196,201,.55)}
-    .fab svg{display:block}
+    .fab a{
+      width:48px; height:48px; display:grid; place-items:center; border-radius:14px;
+      background:linear-gradient(180deg,#0f3a40,#0b2e32); border:1px solid #1c535a; box-shadow:var(--shadow);
+      transition:.18s ease; color:var(--text);
+    }
+    .fab a:hover{transform:translateY(-2px); background:linear-gradient(180deg,#145159,#0f3a40)}
+    .fab svg{width:22px; height:22px; fill:var(--muted)}
 
-    footer{color:var(--ink-dim); padding:40px 0 60px; font-size:14px}
+    footer{color:#92cbc7; text-align:center; padding:24px 0 60px}
+
+    /* responsive */
+    @media (max-width:840px){
+      h1{font-size:44px}
+      .grid{grid-template-columns:1fr}
+      .fab{right:12px; top:auto; bottom:18px; flex-direction:row}
+    }
   </style>
 </head>
 <body>
+  <!-- Floating socials -->
+  <nav class="fab" aria-label="Social shortcuts">
+    <a href="https://www.facebook.com/ricardozaal" target="_blank" aria-label="Facebook" rel="noopener">
+      <svg viewBox="0 0 24 24"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07c0 5.02 3.66 9.19 8.44 9.93v-7.02H7.9V12.1h2.54V9.86c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.23.2 2.23.2v2.46h-1.25c-1.23 0-1.61.76-1.61 1.55v1.9h2.74l-.44 2.88h-2.3V22c4.78-.74 8.44-4.91 8.44-9.93z"/></svg>
+    </a>
+    <a href="https://www.tiktok.com/@ricardodzaal" target="_blank" aria-label="TikTok" rel="noopener">
+      <svg viewBox="0 0 24 24"><path d="M21 8.5a7.5 7.5 0 0 1-4.6-1.6v7.3a5.7 5.7 0 1 1-4.8-5.6v2.65a3.05 3.05 0 1 0 2.1 2.91V2h2.67a4.8 4.8 0 0 0 4.63 3.44V8.5Z"/></svg>
+    </a>
+    <a href="https://www.instagram.com/ricardo.zaal" target="_blank" aria-label="Instagram" rel="noopener">
+      <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5Zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5ZM18 6.2a1 1 0 1 1-1 1 1 1 0 0 1 1-1Z"/></svg>
+    </a>
+    <a href="mailto:info@ricardozaal.com" aria-label="Email">
+      <svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
+    </a>
+    <a href="https://wa.me/27618560854" target="_blank" aria-label="WhatsApp" rel="noopener">
+      <svg viewBox="0 0 24 24"><path d="M20 3.9A10 10 0 0 0 3.2 17.4L2 22l4.7-1.2A10 10 0 1 0 20 3.9ZM12 20a8 8 0 0 1-4.1-1.1l-.3-.2-2.8.7.7-2.7-.2-.3A8 8 0 1 1 12 20Zm3.9-5.8c-.2-.1-1.1-.5-1.3-.6-.2-.1-.4-.1-.5.1-.2.2-.6.7-.7.8-.1.1-.3.1-.5 0-1-.4-1.9-1.1-2.6-1.9-.2-.2-.4-.5-.1-.7.1-.1.2-.3.3-.4.1-.1.1-.2.2-.4.1-.2.1-.3 0-.5s-.5-1.1-.7-1.5c-.2-.4-.4-.4-.5-.4h-.4c-.2 0-.5.1-.7.3-.3.3-1 1-1 2.4s1 2.8 1.2 3c.2.3 2 3.1 5 4 .7.2 1.2.4 1.6.5.7.2 1.3.2 1.8.1.6-.1 1.1-.5 1.2-1 .2-.6.2-1 .1-1.1-.1-.1-.2-.1-.4-.2Z"/></svg>
+    </a>
+    <a href="https://t.me/+27618560854" target="_blank" aria-label="Telegram" rel="noopener">
+      <svg viewBox="0 0 24 24"><path d="M9.04 16.65 9.2 13l7.48-6.73c.34-.31-.08-.45-.52-.21L7.87 12.1 4.3 10.98c-.77-.24-.78-.76.16-1.15L19.4 4.1c.7-.32 1.36.17 1.09 1.25l-2.6 12.25c-.18.86-.73 1.07-1.47.67l-4.05-2.99-1.95 1.84c-.22.22-.41.41-.8.41Z"/></svg>
+    </a>
+  </nav>
 
-  <!-- HERO -->
-  <header>
-    <h1>Ricardo Zaal</h1>
-    <p class="tag">
-      A voice of faith, purpose, and vision — helping people discover calling, rebuild income through business,
-      and restore dignity with bold action.
-    </p>
-    <div class="cta">
-      <a class="btn btn-primary" href="#about">Learn More</a>
-      <a class="btn btn-ghost" href="#contact">Contact</a>
-      <a class="btn btn-primary" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">
-        Start with Impact Seed
-      </a>
-    </div>
-  </header>
+  <main class="wrap">
+    <header id="top">
+      <h1>Ricardo Zaal</h1>
+      <p class="lead">
+        A voice of faith, purpose, and vision — helping people discover calling, rebuild income
+        through business, and restore dignity with bold action.
+      </p>
 
-  <!-- ABOUT -->
-  <main>
-    <section id="about">
-      <div class="container">
-        <div class="card">
-          <h2>About Ricardo</h2>
-          <p class="lead">
-            I help <strong>Kingdom-minded people</strong> rebuild their lives and income through business and calling —
-            not begging for blessings, but building with wisdom, courage, and dignity. If you’re ready to align faith with
-            practical action and legacy, you’re in the right place.
-          </p>
-        </div>
+      <div class="cta-row">
+        <a class="btn alt" href="#about">Learn More</a>
+        <a class="btn" href="#contact">Contact</a>
+        <a class="btn primary" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">Start with Impact Seed</a>
+      </div>
+    </header>
+
+    <section id="about" class="card">
+      <h2>About Ricardo</h2>
+      <p>
+        I help <b>Kingdom-minded people</b> rebuild their lives and income through business and
+        calling — not begging for blessings, but building with wisdom, courage, and dignity.
+        If you’re ready to align faith with practical action and legacy, you’re in the right place.
+      </p>
+      <p class="muted">Prefer church resources? Visit
+        <a href="https://fountaingrace.org" target="_blank" rel="noopener">fountaingrace.org</a>.
+      </p>
+    </section>
+
+    <section class="card" aria-labelledby="links">
+      <h2 id="links">Quick Links</h2>
+      <div class="grid">
+        <a class="stat" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener">
+          <b>Facebook</b><span class="muted">@ricardozaal</span>
+        </a>
+        <a class="stat" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener">
+          <b>TikTok</b><span class="muted">@ricardodzaal</span>
+        </a>
+        <a class="stat" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener">
+          <b>Instagram</b><span class="muted">@ricardo.zaal</span>
+        </a>
+        <a class="stat" href="https://seed.impactseed.co.za" target="_blank" rel="noopener">
+          <b>Impact Seed</b><span class="muted">seed.impactseed.co.za</span>
+        </a>
+        <a class="stat" href="https://fountaingrace.org" target="_blank" rel="noopener">
+          <b>Fountain of Grace</b><span class="muted">fountaingrace.org</span>
+        </a>
+        <a class="stat" href="#contact">
+          <b>Contact</b><span class="muted">Email • WhatsApp • Telegram</span>
+        </a>
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="container">
-        <div class="card">
-          <h2>Let’s Connect</h2>
-          <p class="lead">Choose what’s easiest for you:</p>
-
-          <div style="display:grid; gap:18px; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); margin-top:18px; text-align:left">
-            <div>
-              <strong>Email</strong><br>
-              <a href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo">info@ricardozaal.com</a>
-            </div>
-            <div>
-              <strong>WhatsApp</strong><br>
-              <a href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect." target="_blank" rel="noopener">
-                +27 61 856 0854
-              </a>
-            </div>
-            <div>
-              <strong>Telegram</strong><br>
-              <!-- This works on devices with Telegram installed -->
-              <a href="tg://resolve?phone=27618560854">Open in Telegram</a>
-            </div>
-          </div>
+    <section id="contact" class="card">
+      <h2>Let’s Connect</h2>
+      <p class="muted">Choose what’s easiest for you:</p>
+      <div class="grid">
+        <div class="stat">
+          <b>Email</b>
+          <a href="mailto:info@ricardozaal.com">info@ricardozaal.com</a>
+        </div>
+        <div class="stat">
+          <b>WhatsApp</b>
+          <a href="https://wa.me/27618560854" target="_blank" rel="noopener">+27 61 856 0854</a>
+        </div>
+        <div class="stat">
+          <b>Telegram</b>
+          <a href="https://t.me/+27618560854" target="_blank" rel="noopener">Open in Telegram</a>
+          <div class="muted" style="margin-top:6px;font-size:13px">If Telegram link doesn’t open, add <b>+27 61 856 0854</b> in Telegram and message.</div>
         </div>
       </div>
     </section>
   </main>
 
-  <!-- FLOATING SOCIAL ICONS (fixed bottom-right) -->
-  <div class="social-fab" aria-label="Social links">
-    <!-- Facebook -->
-    <a class="fab" href="https://www.facebook.com/ricardozaal" target="_blank" rel="noopener" aria-label="Facebook">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M15 8h2V4h-2c-2.2 0-4 1.8-4 4v2H9v4h2v6h4v-6h2l1-4h-3V8c0-.6.4-1 1-1Z" fill="#08c4c9"/></svg>
-    </a>
-    <!-- TikTok -->
-    <a class="fab" href="https://www.tiktok.com/@ricardodzaal" target="_blank" rel="noopener" aria-label="TikTok">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M14 3h3c.2 1.8 1.5 3.2 3 3.6V10c-1.9-.1-3.6-.7-5-1.7v6.4a5.7 5.7 0 1 1-3.6-5.3V12a3.2 3.2 0 1 0 2 3V3Z" fill="#08c4c9"/></svg>
-    </a>
-    <!-- Instagram -->
-    <a class="fab" href="https://www.instagram.com/ricardo.zaal" target="_blank" rel="noopener" aria-label="Instagram">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><rect x="4" y="4" width="16" height="16" rx="5" stroke="#08c4c9" stroke-width="1.6"/><circle cx="12" cy="12" r="4" stroke="#08c4c9" stroke-width="1.6"/><circle cx="17.5" cy="6.5" r="1.25" fill="#08c4c9"/></svg>
-    </a>
-    <!-- Email -->
-    <a class="fab" href="mailto:info@ricardozaal.com?subject=Hello%20Ricardo" aria-label="Email">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><rect x="3.5" y="5.5" width="17" height="13" rx="2" stroke="#08c4c9" stroke-width="1.6"/><path d="M4 7l8 6 8-6" stroke="#08c4c9" stroke-width="1.6"/></svg>
-    </a>
-    <!-- WhatsApp -->
-    <a class="fab" href="https://wa.me/27618560854?text=Hi%20Ricardo%2C%20I%E2%80%99d%20like%20to%20connect." target="_blank" rel="noopener" aria-label="WhatsApp">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="9" stroke="#08c4c9" stroke-width="1.6"/><path d="M8.5 9.5c.3 2.9 2.6 5.2 5.5 5.5l1.5-1.5-2.3-1 .9-1.8-1.8-.9-1 2.3-1.8-.9-1.5 1.3Z" fill="#08c4c9"/></svg>
-    </a>
-  </div>
+  <footer>
+    © <span id="y"></span> Ricardo Zaal. All rights reserved.
+  </footer>
 
-  <footer>© <span id="y"></span> Ricardo Zaal. All rights reserved.</footer>
-
-  <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+  <script>
+    // year + smooth scroll
+    document.getElementById('y').textContent = new Date().getFullYear();
+    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+      a.addEventListener('click',e=>{
+        const id=a.getAttribute('href').slice(1); const el=document.getElementById(id);
+        if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'}); }
+      });
+    });
+  </script>
 </body>
 </html>
